objects/YouTube_Channel__c/YouTube_Channel__c.object-meta.xml
<CustomObject>
    <label>YouTube Channel</label>
    <nameField>
        <displayFormat>YTC{000}</displayFormat>
        <label>Youtube Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>YouTube Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>