objects/YouTube_Channel__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>