objects/YouTube_Channel__c/fields/Fetch__c.field-meta.xml
<CustomField>
    <fullName>Fetch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fetch</label>
    <type>Checkbox</type>
</CustomField>