objects/YouTube_Channel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Channel_Id__c</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Published_At__c</columns>
    <columns>Fetch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>